// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardContainer should render our good friend, CardContainer 1`] = `
<div
  className="card-container"
>
  <input
    className="search"
    onChange={[Function]}
    placeholder="SEARCH"
    type="search"
  />
  <QualityFilter
    filterByQuality={[Function]}
  />
  <IdeaCard
    body="World!"
    id={1234}
    key="0"
    quality="plausible"
    removeIdea={[Function]}
    title="Hello"
    updateIdeaQuality={[Function]}
  />
  <IdeaCard
    body="Woo Hoo"
    id={4321}
    key="1"
    quality="genius"
    removeIdea={[Function]}
    title="New App!"
    updateIdeaQuality={[Function]}
  />
</div>
`;

exports[`CardContainer should render our good friend, CardContainer 2`] = `
<div
  className="card-container"
>
  <input
    className="search"
    onChange={[Function]}
    placeholder="SEARCH"
    type="search"
  />
  <QualityFilter
    filterByQuality={[Function]}
  />
</div>
`;
